# woeboost

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  compatibility.yml  freethreaded.yml
docs/: classifier.md  explainer.md  index.md  learner.md  technical_note.md
tests/: README.md  __init__.py  run_freethreaded_tests.sh  run_tests.py  test_classifier.py  test_explainer.py  test_freethreading_detection_example.py  test_learner.py
tests/freethreaded/: __init__.py  pyproject-freethreaded.toml  requirements-freethreaded.txt  run_freethreaded_tests.py  test_freethreaded.py  test_freethreading_verification.py  test_minimal_freethreaded.py  test_woeboost_freethreaded.py
tests/integration/: __init__.py  test_woeboost_performance.py
tests/unit/: __init__.py  test_classifier.py  test_explainer.py  test_learner.py
woeboost/: __init__.py  classifier.py  explainer.py  learner.py
